--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "luxon": "^1.25.0",
     "mongoose": "^5.11.14",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-jwt": "^4.0.0",
